# echo

./: .gitignore  Cargo.toml  package.json  readme.md  transcript.txt
audio_transposition/: .gitignore  Cargo.toml  text.txt
audio_transposition/src/: api.rs  audio_stream.rs  main.rs  model.rs  transcription_engine.rs
echo_client/: .gitignore  package.json  vite.main.config.ts  vite.renderer.config.ts  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
echo_client/loaders/: echo-transcriber-loader.js
echo_client/plugins/: nodejs-polars-dirname-plugin.js  nodejs-polars-native-file-plugin.js
echo_client/src/: app.jsx  index.css  index.html  main.js  renderer.js  renderer.ts  root.jsx
echo_client/src/components/AudioSourceSelector/: AudioSouorceSelector.jsx
echo_client/src/components/AudioTranscription/: AudioTranscription.jsx
echo_client/src/components/SliderPanel/: SliderPanel.css  SliderPanel.jsx
echo_client/src/components/VerticalSlider/: vertical_slider.jsx
echo_client/src/contexts/: AudioContext.js
echo_module/: .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
echo_module/buildjs/: index-default.d.ts  index-default.js  index-default.js.map  index.d.ts  index.js  index.js.map
echo_module/crates/echo/: Cargo.toml
echo_module/crates/echo/src/: api.rs
echo_module/install/: cleanbuild.js
echo_module/lib/: index-default.ts  index.ts  load.cts
echo_module/native/: Cargo.toml  artifacts.json
echo_module/native/src/: audio.rs  audio_manager.rs  audio_recorder.rs  audio_transcription_controller.rs  event_publisher.rs  jack.rs  lib.rs  transcription_engine.rs  util.rs  vad.rs  web_rtc_vad.rs
echo_module/native/src/audio_manager/: async_audio_chunk_processor.rs  audio_chunk_processor.rs  mod.rs
echo_module/src/: index-default.ts  load.cts
jack_wrapper/: Cargo.toml  README.md  package-lock.json  package.json
jack_wrapper/crates/jack-wrapper/: Cargo.toml
jack_wrapper/crates/jack-wrapper/src/: api.rs  audio_recorder.rs  jack.rs  lib.rs  transcription_engine.rs  vad.rs
jack_wrapper/src/: index.cts  load.cts
src/: audio_stream.rs  main.rs  querybuilder.rs  timer.rs  token_manager.rs
