[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.2.0"
cpal = "0.15.3"
earshot = "0.1.0"
hound = "3.5.1"
itertools = "0.13.0"
jack = "0.13.0"
regex = "1.11.1"
rubato = "0.16.1"
whisper-rs = {version = "0.13.2", features=[]}
actix-web = "4"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.19"
url = "2"
base64 = "0.22.1"


[profile.release]
debug = true
