[package]
name = "echo_transcriber"
version = "0.1.0"
description = "wrapper for jack"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
futures = "0.3.31"
hound = "3.5.1"
jack = "0.13.0"
lazy_static = "1.5.0"
neon = "1"
once_cell = "1.20.3"
pin-project = "1.1.9"
reqwest = { version = "0.12.12", features = ["json"] }
rubato = "0.16.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
uuid = { version = "1.15.1", features = ["v4"] }
webrtc-vad = "0.4.0"
whisper-rs = "0.13.2"
